plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.36'
}

version = mod_version
group = mod_group_id
base { archivesName = mod_id }

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    maven {
        name = "Create Maven"
        url = "https://maven.createmod.net"
        content {
            includeGroup "com.simibubi.create"
            includeGroupByRegex "net\\.createmod.*"
            includeGroup "dev.engine-room"
        }
    }
    maven {
        name = "GeckoLib"
        url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
        content {
            includeGroup "software.bernie.geckolib"
        }
    }
    maven {
        name = "CurseMaven"
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

runs {
    configureEach {
        workingDirectory project.layout.projectDirectory.dir('run').dir(name)
        modSource sourceSets.main
    }
    client {
        systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
    }
    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        argument '--nogui'
    }
    data {
        arguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"

    compileOnly("com.simibubi.create:create-${minecraft_version}:6.0.10-223:slim") {
        transitive = false
    }

    compileOnly("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
    implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"

    // No Xaero, JourneyMap, or VoxelMap dependency. The Flight Computer owns
    // the complete map acquisition, cache, terrain generation and renderer stack.
}

tasks.withType(ProcessResources).configureEach {
    def replaceProperties = [
        minecraft_version: minecraft_version,
        minecraft_version_range: minecraft_version_range,
        neo_version: neo_version,
        loader_version_range: loader_version_range,
        mod_id: mod_id,
        mod_name: mod_name,
        mod_license: mod_license,
        mod_version: mod_version,
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/neoforge.mods.toml']) { expand replaceProperties }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) { from components.java }
    }
    repositories {
        maven { url = "file://${project.projectDir}/repo" }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
